# cookiecutter-data-science

./: environment-dev.yaml
ccds/: __main__.py
{{ cookiecutter.repo_name }}/: environment.yaml  pyproject.toml  requirements-dev.txt
{{ cookiecutter.repo_name }}/.github/workflows/: quality.yaml
