[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = {{ cookiecutter.module_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }} },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    {% if cookiecutter.open_source_license == 'MIT' %}"License :: OSI Approved :: MIT License"{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}"License :: OSI Approved :: BSD License"{% endif %}
]
requires-python = "~={{ cookiecutter.python_version_number }}"

[tool.ruff]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
line-length = 88
fix = true
show-fixes = true
lint.select = ["E4", "E7", "E9", "F", "I"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
precision = 2

[tool.interrogate]
ignore_init_method = true
ignore_init_module = true
ignore_magic = true
ignore_semiprivate = true
ignore_property_decorators = true
ignore_module = false
ignore_nested_functions = false
igore_nested_classes = true
ignore_setter = false
fail_under = 50

exclude = ["docs", "data", "notebooks", "references", "reports"]
ignore_regex = ["^get$", "mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
color = true
omit_covered_files = false
